--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: font;
+    src: url(Crashnumberinggothic-MAjp.ttf);
+}  
+
+body {
+    background-color: black;
+}
+
 #calculator {
     position: absolute;
     top: 50%;
@@ -8,19 +17,54 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(51, 51, 51);
+    padding: 20px;
+    border-radius: 10px;
 }
 
 #buttons {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-top: 20px;
 }
 
 button {
     padding: 20px;
+    border-radius: 50%;
+    border-color: transparent;
+    margin: 5px;
+    font-family: font;
 }
 
 input {
     width: 100%;
     height: 40px;
     text-align: right;
+    font-family: font;
+    font-size: x-large;
+}
+
+.zero {
+    grid-column: 1 / span 2;
+    border-radius: 30px;
+}
+
+.orange {
+    background-color: rgb(231, 150, 0);
+    color: white;
+    font-size: large;
+}
+
+.gray {
+    background-color: rgb(131, 131, 131);
+    color: white;
+    font-size: large;
+}
+
+input:focus {
+    outline-width: 0;
+}
+
+button:hover {
+    filter: brightness(0.85);
 }
